Refactor About and Hero components to utilize i18next for internationalization; enhance layout responsiveness and RTL support. Add new content to translation files for improved user experience.

--- a/src/assets/locales/ar/translation.json
+++ b/src/assets/locales/ar/translation.json
@@ -9,5 +9,23 @@
     "toggle": "تبديل اللغة",
     "current": "العربية",
     "switch_to": "English"
+  },
+  "hero": {
+    "title": "أتقن فن التداول",
+    "subtitle": "بوابتك نحو الحرية المالية",
+    "description": "انضم إلى آلاف المتداولين الناجحين الذين غيروا مستقبلهم المالي. تجمع منصتنا المتقدمة بين أحدث التقنيات والرؤى الخبيرة لمساعدتك في اتخاذ قرارات تداول مدروسة وتحقيق أقصى عوائد.",
+    "get_started": "ابدأ الآن",
+    "learn_more": "اعرف المزيد"
+  },
+  "about": {
+    "title": "حول هلال الجابري",
+    "description": "هو رائد أعمال ومحلل مالي معتمد دولياً من الأكاديمية البريطانية ومعتمد محلياً من معهد الإمارات للتدريب. SMT معتمد دولياً (الولايات المتحدة، المملكة المتحدة) في مجال التدريب. منذ عام 2017، تخصص في الاستثمار وتداول الأسهم، وفي الشركات الناشئة والمتوسطة الحجم. لديه خبرة واسعة في تقديم التدريب وتطوير الأفراد. لديه خبرة في الأعمال الناجحة، بما في ذلك تقديم الاستشارات لدعم المشاريع وإيجاد الفرص المدرة للدخل. بفضل قصص نجاحه، يساعد الأفراد والمنظمات في بناء استراتيجيات الاستثمار وتحقيق الاستدامة المالية.",
+    "why_title": "لماذا هلال الجابري؟",
+    "goals_title": "أهدافه",
+    "goals_description": "يسعى هلال إلى تقديم برامج تدريبية فعالة تهدف إلى تمكين المتدربين من اكتساب المهارات والمعرفة اللازمة لتحقيق النجاح في مجالاتهم، مع التركيز على الابتكار والتطوير المستمر.",
+    "message_title": "رسالته للعالم",
+    "message_description": "\"المعرفة قوة، والمشاركة في تطوير الآخرين هي رسالتي. أؤمن أن الاستثمار في الناس هو أعظم استثمار، وأسعى دائماً لمساعدة الآخرين على اكتشاف إمكاناتهم الكامنة وتحقيق أهدافهم.\"",
+    "passion_title": "شغف بتطوير الناس",
+    "passion_description": "هلال ملتزم بتطوير الأفراد والمجتمعات من خلال خبرته في التدريب والتطوير. يؤمن بتمكين الأفراد بالمهارات والمعرفة العملية التي تساعدهم على تحسين حياتهم وتحقيق أحلامهم."
   }
 }
