--- a/src/assets/locales/ar/translation.json
+++ b/src/assets/locales/ar/translation.json
@@ -27,5 +27,151 @@
     "message_description": "\"المعرفة قوة، والمشاركة في تطوير الآخرين هي رسالتي. أؤمن أن الاستثمار في الناس هو أعظم استثمار، وأسعى دائماً لمساعدة الآخرين على اكتشاف إمكاناتهم الكامنة وتحقيق أهدافهم.\"",
     "passion_title": "شغف بتطوير الناس",
     "passion_description": "هلال ملتزم بتطوير الأفراد والمجتمعات من خلال خبرته في التدريب والتطوير. يؤمن بتمكين الأفراد بالمهارات والمعرفة العملية التي تساعدهم على تحسين حياتهم وتحقيق أحلامهم."
+  },
+  "story": {
+    "title": "قصص النجاح",
+    "mobile": "بدأ هلال الجابري مسيرته كضابط شرطة، واكتسب خبرة قوية في التحقيقات والعمل الميداني. بعد سنوات من التميز، اتجه إلى مجال التدريب لنقل خبراته.",
+    "desktop": "بدأ هلال الجابري مسيرته المهنية كضابط شرطة، حيث اكتسب خبرة راسخة في التحقيقات الجنائية والعمل الميداني. وبعد سنوات من التميز في هذا المجال، شعر هلال بشغف لتطوير مهاراته ومشاركة خبراته مع الآخرين، فقرر التوجه نحو مجال التدريب. ومن خلال التزامه بالتعلم المستمر وحصوله على العديد من الشهادات المعتمدة محليًا ودوليًا، أصبح هلال مدربًا معتمدًا ومتخصصًا في التداول وإدارة الأزمات وتطوير الذات. وقد أسس سمعة قوية في تقديم دورات تدريبية متميزة، ساعدت الكثيرين على تحقيق أهدافهم وتنمية قدراتهم."
+  },
+  "adaptation": {
+    "quote": "النجاح ليس مجرد هدف، بل هو رحلة مليئة بالتحديات والتعلم. أسعى دائمًا لمساعدة الآخرين على اكتشاف قدراتهم وتطويرها لتحقيق نجاح مستدام.",
+    "author": "— هلال الجابري"
+  },
+  "certificates": {
+    "title": "الشهادات والإنجازات",
+    "description": "مجموعة من الشهادات والتكريمات التي تعكس الرحلة والخبرة والالتزام بالنمو المستمر."
+  },
+  "contact": {
+    "title": "اتصل بنا",
+    "description": "نود أن نسمع منك. أرسل رسالة وسنرد عليك في أقرب وقت ممكن.",
+    "email": "البريد الإلكتروني",
+    "phone": "الهاتف",
+    "location": "الموقع",
+    "form": {
+      "full_name": "الاسم الكامل",
+      "email": "البريد الإلكتروني",
+      "subject": "الموضوع",
+      "message": "الرسالة",
+      "name_placeholder": "اسمك",
+      "email_placeholder": "you@example.com",
+      "subject_placeholder": "كيف يمكننا مساعدتك؟",
+      "message_placeholder": "اكتب رسالتك...",
+      "send_button": "إرسال الرسالة"
+    }
+  },
+  "contact_page": {
+    "title": "تواصل معنا",
+    "description": "مستعد لبدء رحلتك في التداول؟ تواصل معنا اليوم ودعنا نناقش كيف يمكننا مساعدتك في تحقيق أهدافك المالية.",
+    "info_title": "معلومات الاتصال",
+    "info_description": "نحن هنا لمساعدتك على النجاح. تواصل معنا من خلال أي من القنوات أدناه.",
+    "email": "عنوان البريد الإلكتروني",
+    "phone": "رقم الهاتف",
+    "location": "موقع المكتب",
+    "form": {
+      "title": "أرسل لنا رسالة",
+      "full_name": "الاسم الكامل",
+      "email": "عنوان البريد الإلكتروني",
+      "subject": "الموضوع",
+      "message": "رسالتك",
+      "name_placeholder": "أدخل اسمك الكامل",
+      "email_placeholder": "أدخل عنوان بريدك الإلكتروني",
+      "subject_placeholder": "بماذا يمكننا مساعدتك؟",
+      "message_placeholder": "أخبرنا عن أهدافك وكيف يمكننا مساعدتك...",
+      "send_button": "إرسال الرسالة"
+    }
+  },
+  "programs": {
+    "title": "البرامج",
+    "description": "تصفح ورش العمل والدورات التدريبية المهنية المصممة لتعزيز مهاراتك وعقليتك ونموك المهني.",
+    "enroll_button": "سجل الآن",
+    "programs": [
+      {
+        "title": "تحويل الهويات الشخصية إلى دخل إضافي",
+        "subtitle": "حول شغفك إلى ربح",
+        "description": "تعلم كيفية تحديد مهاراتك الفريدة وتحويلها إلى مصادر دخل إضافية تتماشى مع علامتك التجارية الشخصية."
+      },
+      {
+        "title": "المبادئ الأساسية للاستثمار",
+        "subtitle": "أتقن أسس الاستثمار الذكي",
+        "description": "فهم كيفية بناء الثروة على المدى الطويل من خلال استراتيجيات الاستثمار الذكية ورؤى السوق."
+      },
+      {
+        "title": "تطوير مشاريع الشركات الناشئة",
+        "subtitle": "من الفكرة إلى الأعمال المستدامة",
+        "description": "استكشف كيفية إطلاق وتطوير وتوسيع الشركات الناشئة باستراتيجيات عملية ونماذج أعمال مثبتة."
+      },
+      {
+        "title": "التحدث أمام الجمهور بثقة",
+        "subtitle": "تحدث وألهم وقيادة",
+        "description": "بناء الثقة وتعزيز حضورك في التحدث وجذب جمهورك بتقنيات التواصل القوية."
+      },
+      {
+        "title": "بناء السمعة والعلامة التجارية",
+        "subtitle": "أنشئ علامة تجارية تتحدث عنك",
+        "description": "تعلم كيفية بناء سمعة قوية وعلامة تجارية شخصية تجذب الفرص وتبني الثقة."
+      },
+      {
+        "title": "الخروج من الديون والاستثمار من الراتب",
+        "subtitle": "إدارة الأموال الذكية للحرية الحقيقية",
+        "description": "اكتشف الطرق خطوة بخطوة لإدارة الديون والادخار بفعالية والبدء في الاستثمار بحكمة من دخلك الشهري."
+      },
+      {
+        "title": "العثور على مصادر دخل إضافية",
+        "subtitle": "وسع إمكاناتك في الكسب",
+        "description": "استكشف طرقًا إبداعية ومستدامة لتوليد مصادر دخل متعددة تدعم أهدافك المالية."
+      }
+    ]
+  },
+  "pricing": {
+    "title": "الأسعار",
+    "description": "استكشف باقات تدريب مرنة مصممة للمعاهد والشركات والأفراد — بهدف تحقيق أعلى قيمة ونمو.",
+    "subscribe_button": "اشترك",
+    "plans": [
+      {
+        "category": "المؤسسات والمنظمات الصغيرة",
+        "items": [
+          {
+            "title": "استشارة عامة / متخصصة (ساعة واحدة)",
+            "price": "1,000 درهم",
+            "desc": "احصل على استشارة خبيرة مصممة وفقًا لاحتياجاتك للنمو الشخصي أو المؤسسي."
+          },
+          {
+            "title": "ورشة تدريبية لمدة ساعة",
+            "price": "3,500 درهم",
+            "desc": "جلسة عملية مركزة تقدم مهارات ورؤى قابلة للتطبيق."
+          },
+          {
+            "title": "ورشة تدريبية ليوم واحد",
+            "price": "5,000 درهم",
+            "desc": "ورشة شاملة ليوم واحد لتطوير وصقل المهارات المهنية الأساسية."
+          },
+          {
+            "title": "دورة تدريبية ليوم واحد",
+            "price": "8,000 درهم",
+            "desc": "دورة مكثفة ليوم كامل مصممة لتحقيق نتائج تطوير قابلة للقياس."
+          }
+        ]
+      },
+      {
+        "category": "الشركات المتوسطة",
+        "items": [
+          {
+            "title": "برنامج تدريبي كامل (أسبوع واحد)",
+            "price": "20,000 درهم",
+            "desc": "تجربة تدريبية متعمقة لمدة أسبوع مصممة لتحسين الأداء المؤسسي."
+          }
+        ]
+      },
+      {
+        "category": "الشركات الكبيرة",
+        "items": [
+          {
+            "title": "برنامج تدريبي كامل (يوم واحد)",
+            "price": "40,000 درهم",
+            "desc": "جلسة تدريبية متميزة تركز على القيادة والاستراتيجية والأداء."
+          }
+        ]
+      }
+    ]
   }
 }
