Implement SPA support for GitHub Pages in index.html; update package-lock.json for consistent naming; modify BrowserRouter basename in main.jsx; enhance translations in Arabic and English for hero section; adjust Footer component for sponsorship visibility; improve layout and styling in Pricing and Programs pages; add download link for certification in Hero component; remove unused PSD asset.

--- a/src/assets/locales/ar/translation.json
+++ b/src/assets/locales/ar/translation.json
@@ -11,11 +11,11 @@
     "switch_to": "English"
   },
   "hero": {
-    "title": "أتقن فن التداول",
-    "subtitle": "بوابتك نحو الحرية المالية",
-    "description": "انضم إلى آلاف المتداولين الناجحين الذين غيروا مستقبلهم المالي. تجمع منصتنا المتقدمة بين أحدث التقنيات والرؤى الخبيرة لمساعدتك في اتخاذ قرارات تداول مدروسة وتحقيق أقصى عوائد.",
+    "title":" هلال الجابري – رائد التدريب والاستثمار",
+    "subtitle": "خبرة تقودك نحو التميز المالي والمهني",
+    "description":" هلال الجابري مدرب وخبير استثماري معتمد دوليًا ومحليًا، ساعد آلاف المتدربين على تحقيق أهدافهم وبناء استراتيجيات استثمارية ناجحة. يجمع بين الرؤية العملية والخبرة الواسعة ليقدّم برامج تدريبية مبتكرة تمكّنك من تطوير مهاراتك والوصول إلى الاستقلال المالي.",
     "get_started": "ابدأ الآن",
-    "learn_more": "اعرف المزيد"
+    "learn_more": "تحميل الشهادات"
   },
   "about": {
     "title": "حول هلال الجابري",
