--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -11,11 +11,11 @@
     "switch_to": "العربية"
   },
   "hero": {
-    "title": "Master the Art of Trading",
-    "subtitle": "Your Gateway to Financial Freedom",
-    "description": "Join thousands of successful traders who have transformed their financial future. Our advanced platform combines cutting-edge technology with expert insights to help you make informed trading decisions and maximize your returns.",
+    "title": "Helal Al Jabri – Trainer & Investment Expert",
+    "subtitle": "Experience that empowers your financial and professional growth",
+    "description": "Helal Al Jabri is a certified trainer and investment expert empowering thousands to achieve financial growth through innovative training and strategic insight",
     "get_started": "Get Started",
-    "learn_more": "Learn More"
+    "learn_more": "Download certificates"
   },
   "about": {
     "title": "About Hilal Al Jaberi",
